<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="144dp"
    android:layout_marginTop="16dp"
    android:background="@color/colorWhite">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorSilver"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/title"
        style="@style/textViewStyleBlackTwo87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/personal_recommendations_label" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_boy"
            style="@style/buttonDarkSkyBlue"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:text="@string/boy" />

        <Button
            android:id="@+id/button_girl"
            style="@style/buttonMediumPink"
            android:layout_width="120dp"
            android:layout_height="36dp"
            android:layout_marginLeft="40dp"
            android:text="@string/girl" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSilver"
        android:contentDescription="@string/description" />

</RelativeLayout>