<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginTop="16dp"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/colorSilver"
        android:contentDescription="@string/description" />

    <ImageView
        android:id="@+id/picture"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:src="@mipmap/ic_gift"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description" />

    <TextView
        android:id="@+id/title"
        style="@style/textViewStyleBlackTwo87"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/picture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/present_label" />

    <Button
        android:id="@+id/button_give"
        style="@style/buttonCerulean"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:text="@string/pick_up"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorSilver"
        android:contentDescription="@string/description" />

</RelativeLayout>